--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.12.1",
     "flatpickr": "^4.6.13",
     "flowbite-datepicker": "^1.2.2",
